# edna-wip

./: .gitignore  Cargo.toml  build.rs  profile.sh
benches/: flamegraph.rs  flamegraph_idna.rs  main.rs  map.rs  punycode.rs
examples/: parseline.rs
src/: lib.rs  lib.rs.match  lib.rs.new  mapping.rs  punycode.rs
tests/: main.rs  mapping.rs  punycode.rs  uts46.rs
